Parser/Data/expression.ebnf
expression =
    equality

equality =
    comparison [ ( "=" | "<>" ) comparison ] .
    
comparison =
    term [ ( "<" | "<=" | ">" | ">=" ) term ] .

term = 
    factor { ("+" | "-") factor } .

factor = 
    unary { ("*" | "/") unary } .

unary = 
    ( "-" | "+" ) unary | primary .

primary 
    = IDENTIFIER | NUMBER | STRING | "(" expression ")" .
    
